# aupamatch

./: README.md  csp.js  der.md  package-lock.json  package.json  tailwind.config.js
server/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
server/project/: settings.py  urls.py
server/project/bases/: apps.py  models.py  serializers.py  urls.py  views.py
server/project/bases/migrations/: 0001_initial.py
server/project/custom_auth/: apps.py  models.py  serializers.py  urls.py  views.py
server/project/custom_auth/migrations/: 0001_initial.py
src/: App.css  App.js  i18n.js  index.css  index.js
src/common/: i18n.js
src/components/: Dashboard.js  Footer.js  MinhasVagas.js  Navbar.js  Register.js  Section.js  Topbar.js  TranslationBar.js  VagaCard.js  busca.component.js  cadastroevagas.component.js  cadastroevagas.js  candidaturas-cards.component.js  candidaturas.component.js  cardvaga.component.js  home.component.js  login.component.js  matches.component.js  profile.component.js  profilecard.component.js  register-vaga.component.js  register.component.js  sidebar.js  vaga.component.js  vagas-cards.component.js  vagas.component.js
src/locales/en/: translationEN.json
src/locales/pt/: translationPT.json
src/services/: auth-header.js  auth.service.js  user.service.js
src/styles/: App.css
src/translate/: en.json  i18n.js  index.js  pt.json
